<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".PlayedGameFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/mtrl_card_spacing_custom"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPGName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPGDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/played_game_difficulty"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintBottom_toTopOf="@+id/tvPGOperator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPGOperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/played_game_operator"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintBottom_toTopOf="@+id/tvPGGameTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPGDifficulty" />

            <TextView
                android:id="@+id/tvPGGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_popup_gameTime"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintBottom_toTopOf="@+id/tvPGCorrectAnswers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPGOperator" />

            <TextView
                android:id="@+id/tvPGCorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/played_game_correct_answers"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintBottom_toTopOf="@+id/tvPGWrongAnswers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPGGameTime" />

            <TextView
                android:id="@+id/tvPGWrongAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/played_game_wrong_answers"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintBottom_toTopOf="@+id/tvPGDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPGCorrectAnswers" />

            <TextView
                android:id="@+id/tvPGDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/played_game_date"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="@dimen/mtrl_card_spacing_custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPGWrongAnswers" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/mtrl_card_spacing_custom"
                android:backgroundTint="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_delete_white_24dp"
                app:borderWidth="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>